--- a/seaty-allocation.ipynb
+++ b/seaty-allocation.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "# PARAMETERS\n",
-    "DISTANCE_RANGE = 8"
+    "DISTANCE_RANGE = 10"
    ]
   },
   {
@@ -146,22 +146,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "1b4a05eb-ebb3-4e70-9e14-ab6d1252bfde",
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_event_allocation(event):\n",
     "    data_types_dict = {\n",
-    "        'Anzahl Karten': int,\n",
-    "        'Gruppe': int,\n",
-    "        'Reihenwunsch': str\n",
+    "        'seats': int,\n",
+    "        'group': int,\n",
+    "        'preferred_row': str\n",
     "    }\n",
-    "    default_values = {'Anzahl Karten': 0, 'Gruppe': -1, 'Reihenwunsch': \"\"}\n",
-    "    path_to_reservations='/home/aldw/Documents/svb/2022/kartenreservierung.xlsx'\n",
-    "    reservations = pd.read_excel(path_to_reservations,sheet_name=event)\n",
+    "    default_values = {'seats': 0, 'group': -1, 'preferred_row': \"\"}\n",
+    "    path_to_reservations='/home/aludwig/Documents/svb/2023/reservations.csv'\n",
+    "    all_reservations = pd.read_csv(path_to_reservations, sep=';')\n",
+    "    reservations = all_reservations[all_reservations['event_id']==event]\n",
     "    reservations = reservations.fillna(value=default_values).astype(data_types_dict)\n",
-    "    reservations = reservations.sort_values('Prio', ascending=False)\n",
+    "    reservations = reservations.sort_values('prio', ascending=False)\n",
     "\n",
     "    location=[]\n",
     "    for _ in range(4):\n",
@@ -173,8 +174,8 @@
     "    for _ in range(4):\n",
     "        location.append([None for _ in range(1,5)])\n",
     "\n",
-    "    reservations = reservations[['Res.Nr.', 'Anzahl Karten', 'Gruppe','Reihenwunsch', 'Name', 'Sonstiges']]\n",
-    "    reservations = reservations[reservations['Anzahl Karten']>0]\n",
+    "    reservations = reservations[['code', 'seats', 'group','preferred_row', 'name', 'comment']]\n",
+    "    reservations = reservations[reservations['seats']>0]\n",
     "    reservations_list = reservations.values.tolist()\n",
     "    res_idx, cards_idx, group_idx, wish_idx, name_idx = 0, 1, 2, 3, 4\n",
     "\n",
@@ -211,7 +212,7 @@
     "    not_allocated = [groups[i] for i in not_allocated_idx]\n",
     "\n",
     "    print(f\"Allocation finished for event {event}\")\n",
-    "    print(len(groups), len(assigned_reservations))\n",
+    "    print(f\"all groups: {len(groups)}, assigned {len(assigned_reservations)}\")\n",
     "    print(sum(res[cards_idx] for res in reservations_list))\n",
     "    print(sum([0 if res is None else 1 for row in location for res in row]))\n",
     "    print(\"not allocated groups\", not_allocated)\n",
@@ -220,13 +221,13 @@
     "    # make reservation overview html\n",
     "    environment = Environment(loader=FileSystemLoader(\"templates/\"))\n",
     "    template_file = environment.get_template(\"location_template.html\")\n",
-    "    rendered_file = f\"location_event_{event+1}.html\"\n",
+    "    rendered_file = f\"location_event_{event}.html\"\n",
     "\n",
     "    context = {\n",
     "        \"block_1\":location[:4],\n",
     "        \"block_2\":location[4:9],\n",
     "        \"block_3\":location[9:],\n",
-    "        \"res_to_name\": pd.Series(reservations['Name'].values,index=reservations['Res.Nr.']).to_dict()\n",
+    "        \"res_to_name\": pd.Series(reservations['name'].values,index=reservations['code']).to_dict()\n",
     "    }\n",
     "\n",
     "    with open(rendered_file, mode=\"w\", encoding=\"utf-8\") as results:\n",
@@ -234,7 +235,7 @@
     "        \n",
     "    # make reservation cards\n",
     "    reservation_file = environment.get_template(\"reservations_template.html\")\n",
-    "    reservation_out_file = f\"reservation_cards_{event+1}.html\"\n",
+    "    reservation_out_file = f\"reservation_cards_{event}.html\"\n",
     "    context_reservations = {\n",
     "        \"reservations\": reservations.to_dict('records')\n",
     "    }\n",
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "bd0e0948-d1ed-4e63-a9a8-a0fbb9648382",
    "metadata": {},
    "outputs": [
@@ -253,54 +254,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Allocation finished for event 0\n",
-      "32 32\n",
-      "154\n",
-      "154\n",
-      "not allocated groups []\n",
-      "------------------------------------------------------\n",
       "Allocation finished for event 1\n",
-      "34 34\n",
-      "142\n",
-      "142\n",
+      "all groups: 21, assigned 21\n",
+      "108\n",
+      "108\n",
       "not allocated groups []\n",
       "------------------------------------------------------\n",
       "Allocation finished for event 2\n",
-      "36 36\n",
-      "115\n",
-      "115\n",
-      "not allocated groups []\n",
+      "all groups: 15, assigned 11\n",
+      "65\n",
+      "51\n",
+      "not allocated groups [[2013, 2013, 2013, 2013], [2014, 2014, 2014, 2014, 2014, 2014], [2015, 2015], [2016, 2016]]\n",
       "------------------------------------------------------\n",
       "Allocation finished for event 3\n",
-      "29 29\n",
-      "146\n",
-      "146\n",
+      "all groups: 19, assigned 19\n",
+      "60\n",
+      "60\n",
       "not allocated groups []\n",
       "------------------------------------------------------\n",
       "Allocation finished for event 4\n",
-      "35 35\n",
-      "145\n",
-      "145\n",
+      "all groups: 5, assigned 5\n",
+      "32\n",
+      "32\n",
       "not allocated groups []\n",
       "------------------------------------------------------\n",
       "Allocation finished for event 5\n",
-      "37 37\n",
-      "199\n",
-      "199\n",
+      "all groups: 15, assigned 15\n",
+      "59\n",
+      "59\n",
+      "not allocated groups []\n",
+      "------------------------------------------------------\n",
+      "Allocation finished for event 6\n",
+      "all groups: 16, assigned 16\n",
+      "64\n",
+      "64\n",
       "not allocated groups []\n",
       "------------------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "for event in range(6):\n",
+    "for event in [1,2,3,4,5,6]:\n",
     "    create_event_allocation(event)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ed7c26a-58b1-481d-991a-d77514840945",
+   "id": "3a40d2bc-45ee-4bf4-89b7-0f78a3848635",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -308,7 +309,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -322,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
