bugfixes after refactorings.

--- a/seaty-allocation.ipynb
+++ b/seaty-allocation.ipynb
@@ -147,11 +147,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1b4a05eb-ebb3-4e70-9e14-ab6d1252bfde",
-   "metadata": {},
+   "id": "05c4a868-3b0c-4cbe-974b-81286daae38f",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "def create_event_allocation(event):\n",
+    "def get_reservations_for_event(event):\n",
     "    data_types_dict = {\n",
     "        'seats': int,\n",
     "        'group': int,\n",
@@ -163,6 +165,17 @@
     "    reservations = all_reservations[all_reservations['event_id']==event]\n",
     "    reservations = reservations.fillna(value=default_values).astype(data_types_dict)\n",
     "    reservations = reservations.sort_values('prio', ascending=False)\n",
+    "    return reservations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1b4a05eb-ebb3-4e70-9e14-ab6d1252bfde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_allocation(reservations):\n",
     "\n",
     "    location=[]\n",
     "    for _ in range(4):\n",
@@ -246,7 +259,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
+   "id": "7c39a8c4-b35b-4bd4-8a29-1d182d534f0b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def create_event_allocation(event):\n",
+    "    reservations = get_reservations_for_event(event)\n",
+    "    create_allocation(reservations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "bd0e0948-d1ed-4e63-a9a8-a0fbb9648382",
    "metadata": {},
    "outputs": [
