--- a/seaty-allocation.ipynb
+++ b/seaty-allocation.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "c7794200-8e8c-48c3-ade8-4cf8875df9c7",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -15,7 +17,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "3207f9a9-85af-47e7-8042-0f8cc8042705",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# PARAMETERS\n",
@@ -26,7 +30,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "0118c08a-4294-4fba-a9b5-eed2f914af74",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def get_distance(row_nr, seat_nr):\n",
@@ -46,7 +52,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "de6699c0-fe57-4081-8886-1d64185e99f3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def find_all_options(location, number_of_seats):\n",
@@ -64,7 +72,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "2e41fa25-7e41-47a8-9cc7-6e635d3e7eed",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def find_options(location, number_of_seats,row_wishes):\n",
@@ -80,7 +90,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "e0d89173-269d-4489-b057-c81612b13665",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def validate_options(location, options):\n",
@@ -111,7 +123,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "a6a32b3e-72bd-460e-838f-fb1230afd158",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def get_row_wishes(reservations, res_ids):\n",
@@ -125,7 +139,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "e00b5a9d-f4c3-4a51-a848-639d9f448097",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def allocate_seat(location, reservation_seats, row_wishes):\n",
@@ -164,7 +180,7 @@
     "    all_reservations = pd.read_csv(path_to_reservations, sep=';')\n",
     "    reservations = all_reservations[all_reservations['event_id']==event]\n",
     "    reservations = reservations.fillna(value=default_values).astype(data_types_dict)\n",
-    "    reservations = reservations.sort_values('prio', ascending=False)\n",
+    "    reservations = reservations.sort_values(['prio', 'code'], ascending=[False, True])\n",
     "    return reservations"
    ]
   },
@@ -172,7 +188,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "1b4a05eb-ebb3-4e70-9e14-ab6d1252bfde",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def create_allocation(reservations):\n",
@@ -275,46 +293,48 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "bd0e0948-d1ed-4e63-a9a8-a0fbb9648382",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Allocation finished for event 1\n",
-      "all groups: 21, assigned 21\n",
-      "108\n",
-      "108\n",
+      "all groups: 35, assigned 35\n",
+      "148\n",
+      "148\n",
       "not allocated groups []\n",
       "------------------------------------------------------\n",
       "Allocation finished for event 2\n",
-      "all groups: 15, assigned 11\n",
-      "65\n",
-      "51\n",
-      "not allocated groups [[2013, 2013, 2013, 2013], [2014, 2014, 2014, 2014, 2014, 2014], [2015, 2015], [2016, 2016]]\n",
+      "all groups: 23, assigned 23\n",
+      "91\n",
+      "91\n",
+      "not allocated groups []\n",
       "------------------------------------------------------\n",
       "Allocation finished for event 3\n",
-      "all groups: 19, assigned 19\n",
-      "60\n",
-      "60\n",
+      "all groups: 29, assigned 29\n",
+      "107\n",
+      "107\n",
       "not allocated groups []\n",
       "------------------------------------------------------\n",
       "Allocation finished for event 4\n",
-      "all groups: 5, assigned 5\n",
-      "32\n",
-      "32\n",
+      "all groups: 11, assigned 11\n",
+      "59\n",
+      "59\n",
       "not allocated groups []\n",
       "------------------------------------------------------\n",
       "Allocation finished for event 5\n",
-      "all groups: 15, assigned 15\n",
-      "59\n",
-      "59\n",
+      "all groups: 21, assigned 21\n",
+      "87\n",
+      "87\n",
       "not allocated groups []\n",
       "------------------------------------------------------\n",
       "Allocation finished for event 6\n",
-      "all groups: 16, assigned 16\n",
-      "64\n",
-      "64\n",
+      "all groups: 27, assigned 27\n",
+      "116\n",
+      "116\n",
       "not allocated groups []\n",
       "------------------------------------------------------\n"
      ]
