--- a/seaty-allocation.ipynb
+++ b/seaty-allocation.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "# PARAMETERS\n",
-    "DISTANCE_RANGE = 10"
+    "DISTANCE_RANGE = 8"
    ]
   },
   {
@@ -173,9 +173,10 @@
     "    data_types_dict = {\n",
     "        'seats': int,\n",
     "        'group': int,\n",
-    "        'preferred_row': str\n",
+    "        'preferred_row': str,\n",
+    "        'comment': str\n",
     "    }\n",
-    "    default_values = {'seats': 0, 'group': -1, 'preferred_row': \"\"}\n",
+    "    default_values = {'seats': 0, 'group': -1, 'preferred_row': \"\", 'comment': \"\"}\n",
     "    path_to_reservations='/home/aludwig/Documents/svb/2023/reservations.csv'\n",
     "    all_reservations = pd.read_csv(path_to_reservations, sep=';')\n",
     "    reservations = all_reservations[all_reservations['event_id']==event]\n",
@@ -270,7 +271,7 @@
     "    context_reservations = {\n",
     "        \"reservations\": reservations.to_dict('records')\n",
     "    }\n",
-    "    \n",
+    "          \n",
     "    with open(reservation_out_file, mode=\"w\", encoding=\"utf-8\") as results:\n",
     "        results.write(reservation_file.render(context_reservations))\n"
    ]
@@ -301,47 +302,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Allocation finished for event 1\n",
-      "all groups: 35, assigned 35\n",
-      "148\n",
-      "148\n",
-      "not allocated groups []\n",
-      "------------------------------------------------------\n",
-      "Allocation finished for event 2\n",
-      "all groups: 23, assigned 23\n",
-      "91\n",
-      "91\n",
-      "not allocated groups []\n",
-      "------------------------------------------------------\n",
-      "Allocation finished for event 3\n",
-      "all groups: 29, assigned 29\n",
-      "107\n",
-      "107\n",
-      "not allocated groups []\n",
-      "------------------------------------------------------\n",
-      "Allocation finished for event 4\n",
-      "all groups: 11, assigned 11\n",
-      "59\n",
-      "59\n",
-      "not allocated groups []\n",
-      "------------------------------------------------------\n",
-      "Allocation finished for event 5\n",
-      "all groups: 21, assigned 21\n",
-      "87\n",
-      "87\n",
-      "not allocated groups []\n",
-      "------------------------------------------------------\n",
       "Allocation finished for event 6\n",
-      "all groups: 27, assigned 27\n",
-      "116\n",
-      "116\n",
+      "all groups: 36, assigned 36\n",
+      "152\n",
+      "152\n",
       "not allocated groups []\n",
       "------------------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "for event in [1,2,3,4,5,6]:\n",
+    "for event in [6]:\n",
     "    create_event_allocation(event)"
    ]
   },
