switched to api, updadet layout of cards, changed folder structure of generated files

--- a/seaty-allocation.ipynb
+++ b/seaty-allocation.ipynb
@@ -10,7 +10,10 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from jinja2 import Environment, FileSystemLoader"
+    "from jinja2 import Environment, FileSystemLoader\n",
+    "import requests\n",
+    "from io import StringIO\n",
+    "import os"
    ]
   },
   {
@@ -163,24 +166,33 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "05c4a868-3b0c-4cbe-974b-81286daae38f",
-   "metadata": {
-    "tags": []
-   },
+   "id": "74480ff8-71d3-4fca-8b7a-5f9d14bb23c2",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def get_reservations_for_event(event):\n",
+    "def get_all_reservations():\n",
+    "    user = os.getenv(\"SEATY_API_USER\")\n",
+    "    pwd = os.getenv(\"SEATY_API_PWD\")\n",
+    "    # Define the API URL and credentials\n",
+    "    url = os.getenv(\"SEATY_API_URL\")\n",
+    "    auth = (user, pwd)\n",
+    "    \n",
+    "    # Send a GET request to the API with Basic Authentication\n",
+    "    response = requests.get(url, auth=auth)\n",
+    "    \n",
+    "    csv_data = StringIO(response.text)\n",
+    "    df = pd.read_csv(csv_data, delimiter=';')\n",
+    "    \n",
     "    data_types_dict = {\n",
     "        'seats': int,\n",
     "        'group': int,\n",
+    "        'event_id': int,\n",
     "        'preferred_row': str,\n",
     "        'comment': str\n",
     "    }\n",
     "    default_values = {'seats': 0, 'group': -1, 'preferred_row': \"\", 'comment': \"\"}\n",
-    "    path_to_reservations='/home/aludwig/Documents/svb/2023/reservations.csv'\n",
-    "    all_reservations = pd.read_csv(path_to_reservations, sep=';')\n",
-    "    reservations = all_reservations[all_reservations['event_id']==event]\n",
-    "    reservations = reservations.fillna(value=default_values).astype(data_types_dict)\n",
+    "    \n",
+    "    reservations = df.fillna(value=default_values).astype(data_types_dict)\n",
     "    reservations = reservations.sort_values(['prio', 'code'], ascending=[False, True])\n",
     "    return reservations"
    ]
@@ -253,7 +265,7 @@
     "    # make reservation overview html\n",
     "    environment = Environment(loader=FileSystemLoader(\"templates/\"))\n",
     "    template_file = environment.get_template(\"location_template.html\")\n",
-    "    rendered_file = f\"location_event_{event}.html\"\n",
+    "    rendered_file = f\"./generated/event_{event}_location.html\"\n",
     "\n",
     "    context = {\n",
     "        \"block_1\":location[:4],\n",
@@ -267,7 +279,7 @@
     "        \n",
     "    # make reservation cards\n",
     "    reservation_file = environment.get_template(\"reservations_template.html\")\n",
-    "    reservation_out_file = f\"reservation_cards_{event}.html\"\n",
+    "    reservation_out_file = f\"./generated/event_{event}_cards.html\"\n",
     "    context_reservations = {\n",
     "        \"reservations\": reservations.to_dict('records')\n",
     "    }\n",
@@ -285,9 +297,9 @@
    },
    "outputs": [],
    "source": [
-    "def create_event_allocation(event):\n",
-    "    reservations = get_reservations_for_event(event)\n",
-    "    create_allocation(reservations)"
+    "def create_event_allocation(reservations, event):\n",
+    "    event_reservations = reservations[reservations['event_id']==event]\n",
+    "    create_allocation(event_reservations)"
    ]
   },
   {
@@ -302,24 +314,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Allocation finished for event 1\n",
+      "all groups: 36, assigned 36\n",
+      "184\n",
+      "184\n",
+      "not allocated groups []\n",
+      "------------------------------------------------------\n",
+      "Allocation finished for event 2\n",
+      "all groups: 34, assigned 34\n",
+      "157\n",
+      "157\n",
+      "not allocated groups []\n",
+      "------------------------------------------------------\n",
+      "Allocation finished for event 3\n",
+      "all groups: 54, assigned 53\n",
+      "189\n",
+      "185\n",
+      "not allocated groups [[3058, 3058, 3058, 3058]]\n",
+      "------------------------------------------------------\n",
+      "Allocation finished for event 4\n",
+      "all groups: 30, assigned 30\n",
+      "133\n",
+      "133\n",
+      "not allocated groups []\n",
+      "------------------------------------------------------\n",
+      "Allocation finished for event 5\n",
+      "all groups: 23, assigned 23\n",
+      "106\n",
+      "106\n",
+      "not allocated groups []\n",
+      "------------------------------------------------------\n",
       "Allocation finished for event 6\n",
       "all groups: 36, assigned 36\n",
-      "152\n",
-      "152\n",
+      "164\n",
+      "164\n",
       "not allocated groups []\n",
       "------------------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "for event in [6]:\n",
-    "    create_event_allocation(event)"
+    "reservations = get_all_reservations()\n",
+    "for event in [1,2,3,4,5,6]:\n",
+    "    create_event_allocation(reservations, event)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a40d2bc-45ee-4bf4-89b7-0f78a3848635",
+   "id": "6fdba758-0126-479c-9ac0-7761eed6e687",
    "metadata": {},
    "outputs": [],
    "source": []
