replaced comment with internal_comment, made allocation more robust when no option can be found

--- a/seaty-allocation.ipynb
+++ b/seaty-allocation.ipynb
@@ -82,11 +82,14 @@
    "source": [
     "def find_options(location, number_of_seats,row_wishes):\n",
     "    options = find_all_options(location, number_of_seats)\n",
-    "    if len(row_wishes) > 0:\n",
-    "        return [option for option in options if option[0] in row_wishes]\n",
+    "    if len(options) > 0:\n",
+    "        if len(row_wishes) > 0:\n",
+    "            return [option for option in options if option[0] in row_wishes]\n",
+    "        else:\n",
+    "            min_distance = min([option[-1] for option in options])\n",
+    "            return [option for option in options if option[-1] <= min_distance + DISTANCE_RANGE]\n",
     "    else:\n",
-    "        min_distance = min([option[-1] for option in options])\n",
-    "        return [option for option in options if option[-1] <= min_distance + DISTANCE_RANGE]"
+    "        return []"
    ]
   },
   {
@@ -188,9 +191,10 @@
     "        'group': int,\n",
     "        'event_id': int,\n",
     "        'preferred_row': str,\n",
-    "        'comment': str\n",
+    "        'comment': str,\n",
+    "        'internal_comment': str\n",
     "    }\n",
-    "    default_values = {'seats': 0, 'group': -1, 'preferred_row': \"\", 'comment': \"\"}\n",
+    "    default_values = {'seats': 0, 'group': -1, 'preferred_row': \"\", 'comment': \"\", 'internal_comment': \"\"}\n",
     "    \n",
     "    reservations = df.fillna(value=default_values).astype(data_types_dict)\n",
     "    reservations = reservations.sort_values(['prio', 'code'], ascending=[False, True])\n",
@@ -218,7 +222,7 @@
     "    for _ in range(4):\n",
     "        location.append([None for _ in range(1,5)])\n",
     "\n",
-    "    reservations = reservations[['code', 'seats', 'group','preferred_row', 'name', 'comment']]\n",
+    "    reservations = reservations[['code', 'seats', 'group','preferred_row', 'name', 'comment', 'internal_comment']]\n",
     "    reservations = reservations[reservations['seats']>0]\n",
     "    reservations_list = reservations.values.tolist()\n",
     "    res_idx, cards_idx, group_idx, wish_idx, name_idx = 0, 1, 2, 3, 4\n",
@@ -315,39 +319,39 @@
      "output_type": "stream",
      "text": [
       "Allocation finished for event 1\n",
-      "all groups: 36, assigned 36\n",
-      "184\n",
-      "184\n",
-      "not allocated groups []\n",
+      "all groups: 18, assigned 17\n",
+      "125\n",
+      "102\n",
+      "not allocated groups [[1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1008, 1008, 1008]]\n",
       "------------------------------------------------------\n",
       "Allocation finished for event 2\n",
-      "all groups: 34, assigned 34\n",
-      "157\n",
-      "157\n",
+      "all groups: 20, assigned 20\n",
+      "94\n",
+      "94\n",
       "not allocated groups []\n",
       "------------------------------------------------------\n",
       "Allocation finished for event 3\n",
-      "all groups: 54, assigned 53\n",
-      "189\n",
-      "185\n",
-      "not allocated groups [[3058, 3058, 3058, 3058]]\n",
-      "------------------------------------------------------\n",
-      "Allocation finished for event 4\n",
-      "all groups: 30, assigned 30\n",
-      "133\n",
-      "133\n",
+      "all groups: 14, assigned 14\n",
+      "44\n",
+      "44\n",
       "not allocated groups []\n",
       "------------------------------------------------------\n",
+      "Allocation finished for event 4\n",
+      "all groups: 19, assigned 9\n",
+      "86\n",
+      "54\n",
+      "not allocated groups [[4008, 4008, 4008, 4008], [4009, 4009, 4009, 4009], [4011, 4011, 4019, 4019], [4014, 4014], [4015, 4015], [4016, 4016], [4017, 4017, 4017, 4017], [4018, 4018, 4018, 4018], [4020, 4020], [4021, 4021, 4021, 4021]]\n",
+      "------------------------------------------------------\n",
       "Allocation finished for event 5\n",
-      "all groups: 23, assigned 23\n",
-      "106\n",
-      "106\n",
+      "all groups: 14, assigned 14\n",
+      "56\n",
+      "56\n",
       "not allocated groups []\n",
       "------------------------------------------------------\n",
       "Allocation finished for event 6\n",
-      "all groups: 36, assigned 36\n",
-      "164\n",
-      "164\n",
+      "all groups: 28, assigned 28\n",
+      "162\n",
+      "162\n",
       "not allocated groups []\n",
       "------------------------------------------------------\n"
      ]
@@ -384,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
