small changes: layout, allocation strategy

--- a/seaty-allocation.ipynb
+++ b/seaty-allocation.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "# PARAMETERS\n",
-    "DISTANCE_RANGE = 8"
+    "DISTANCE_RANGE = 8 # Default 8"
    ]
   },
   {
@@ -45,9 +45,9 @@
     "    if row_nr > 3:\n",
     "        distance = distance + 30\n",
     "    if row_nr in [4,8,9,10,11,12]:\n",
-    "        distance = distance + 6\n",
+    "        distance = distance + 2\n",
     "    if row_nr > 8:\n",
-    "        distance = distance + 24\n",
+    "        distance = distance + 30\n",
     "    return distance"
    ]
   },
@@ -80,7 +80,7 @@
    },
    "outputs": [],
    "source": [
-    "def find_options(location, number_of_seats,row_wishes):\n",
+    "def find_options(location, number_of_seats, row_wishes):\n",
     "    options = find_all_options(location, number_of_seats)\n",
     "    if len(options) > 0:\n",
     "        if len(row_wishes) > 0:\n",
@@ -272,6 +272,7 @@
     "    rendered_file = f\"./generated/event_{event}_location.html\"\n",
     "\n",
     "    context = {\n",
+    "        \"event\":event,\n",
     "        \"block_1\":location[:4],\n",
     "        \"block_2\":location[4:9],\n",
     "        \"block_3\":location[9:],\n",
@@ -318,40 +319,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Allocation finished for event 1\n",
-      "all groups: 18, assigned 17\n",
-      "125\n",
-      "102\n",
-      "not allocated groups [[1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1002, 1008, 1008, 1008]]\n",
-      "------------------------------------------------------\n",
-      "Allocation finished for event 2\n",
-      "all groups: 20, assigned 20\n",
-      "94\n",
-      "94\n",
-      "not allocated groups []\n",
-      "------------------------------------------------------\n",
-      "Allocation finished for event 3\n",
-      "all groups: 14, assigned 14\n",
-      "44\n",
-      "44\n",
-      "not allocated groups []\n",
-      "------------------------------------------------------\n",
-      "Allocation finished for event 4\n",
-      "all groups: 19, assigned 9\n",
-      "86\n",
-      "54\n",
-      "not allocated groups [[4008, 4008, 4008, 4008], [4009, 4009, 4009, 4009], [4011, 4011, 4019, 4019], [4014, 4014], [4015, 4015], [4016, 4016], [4017, 4017, 4017, 4017], [4018, 4018, 4018, 4018], [4020, 4020], [4021, 4021, 4021, 4021]]\n",
-      "------------------------------------------------------\n",
-      "Allocation finished for event 5\n",
-      "all groups: 14, assigned 14\n",
-      "56\n",
-      "56\n",
-      "not allocated groups []\n",
-      "------------------------------------------------------\n",
       "Allocation finished for event 6\n",
-      "all groups: 28, assigned 28\n",
-      "162\n",
-      "162\n",
+      "all groups: 38, assigned 38\n",
+      "200\n",
+      "200\n",
       "not allocated groups []\n",
       "------------------------------------------------------\n"
      ]
@@ -359,7 +330,7 @@
    ],
    "source": [
     "reservations = get_all_reservations()\n",
-    "for event in [1,2,3,4,5,6]:\n",
+    "for event in [6]:\n",
     "    create_event_allocation(reservations, event)"
    ]
   },
@@ -388,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
